@@ -744,6 +744,10 @@ Opencv_Init(Tcl_Interp *interp)
         (Tcl_ObjCmdProc *) mat_exp,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
 
+    Tcl_CreateObjCommand(interp, "::" NS "::extractChannel",
+        (Tcl_ObjCmdProc *) mat_extractChannel,
+        (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
+
     Tcl_CreateObjCommand(interp, "::" NS "::flip",
         (Tcl_ObjCmdProc *) mat_flip,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
